# ZephCore

./: .gitignore  MESHTIMESYNC.md  README.md  build.sh
.github/workflows/: build.yml
formatter/: README.md
zephcore/: ARCHITECTURE.md  CMakeLists.txt  Kconfig  Repeater_CLI_commands.md  west.yml
zephcore/adapters/ble/: ZephyrBLE.cpp  ZephyrBLE.h
zephcore/adapters/board/: ZephyrBoard.cpp
zephcore/adapters/clock/: ZephyrRTCDiscover.c
zephcore/adapters/datastore/: ZephyrDataStore.cpp  ZephyrDataStore.h
zephcore/adapters/gps/: ZephyrGPSManager.cpp
zephcore/adapters/radio/: LoRaRadioBase.cpp  LoRaRadioBase.h
zephcore/adapters/rng/: ZephyrRNG.cpp  ZephyrRNG.h
zephcore/adapters/transport/: LinuxTCPTransport.c  linux_native_setup.c
zephcore/adapters/usb/: ZephyrCompanionUSB.cpp  ZephyrCompanionUSB.h
zephcore/app/: CompanionMesh.cpp  CompanionMesh.h  ObserverMesh.cpp  ObserverMesh.h  RepeaterDataStore.cpp  RepeaterMesh.cpp  RepeaterMesh.h  RepeaterRegionCLI.cpp  RepeaterUplink.cpp  RoomServerMesh.cpp  RoomServerMesh.h  main_observer.cpp
zephcore/boards/: supported_boards.md
zephcore/boards/common/: debug_esp32.conf  linux_common.overlay  nrf52_common.conf  nrf54l_common.conf  zephcore_common.conf
zephcore/boards/esp32/heltec_wifi_lora32_v4/: board.conf
zephcore/boards/esp32/heltec_wifi_lora32_v43/: board.conf
zephcore/boards/esp32/heltec_wireless_tracker/: board.conf  board.overlay
zephcore/boards/esp32/heltec_wireless_tracker_v2/: Kconfig.heltec_wireless_tracker_v2  README.md  board.cmake  board.conf  board.overlay  board.yml  heltec_wireless_tracker_v2-pinctrl.dtsi  heltec_wireless_tracker_v2_procpu.dts  heltec_wireless_tracker_v2_procpu_defconfig
zephcore/boards/esp32/lilygo_t3s3/: Kconfig  Kconfig.lilygo_t3s3  board.cmake  board.conf  board.overlay  board.yml  lilygo_t3s3-pinctrl.dtsi  lilygo_t3s3_procpu.dts  lilygo_t3s3_procpu_defconfig
zephcore/boards/esp32/station_g2/: board.conf
zephcore/boards/esp32/ttgo_tbeam/: board.conf  board.overlay
zephcore/boards/example_board/: README.md
zephcore/boards/nrf52840/gat562_30s/: Kconfig.gat562_30s  board.cmake  board.conf  board.yml  gat562_30s-pinctrl.dtsi  gat562_30s.dts  gat562_30s_defconfig  pre_dt_board.cmake
zephcore/boards/nrf52840/heltec_t096/: Kconfig.heltec_t096  README.md  board.cmake  board.conf  board.yml  heltec_t096_nrf52840-pinctrl.dtsi  heltec_t096_nrf52840.dts  heltec_t096_nrf52840.yaml  heltec_t096_nrf52840_defconfig
zephcore/boards/nrf52840/heltec_t114/: Kconfig.heltec_t114  board.cmake  board.conf  board.yml  heltec_t114_nrf52840-pinctrl.dtsi  heltec_t114_nrf52840.dts  heltec_t114_nrf52840.yaml  heltec_t114_nrf52840_defconfig
zephcore/boards/nrf52840/ikoka_nano_30dbm/: board.conf
zephcore/boards/nrf52840/wio_tracker_l1/: Kconfig.wio_tracker_l1  wio_tracker_l1_nrf52840-pinctrl.dtsi  wio_tracker_l1_nrf52840.dts
zephcore/boards/nrf54l/xiao_nrf54l15/: board.overlay
zephcore/helpers/: AdvertDataHelpers.cpp  AdvertDataHelpers.h  BaseChatMesh.cpp  BaseChatMesh.h  CommonCLI.cpp  CommonCLI.h  ContactInfo.h  MeshTimeSync.cpp  MeshTimeSync.h  NodePrefs.h  RegionMap.cpp  time_sync.c  time_sync.h
zephcore/helpers/ui/: cfb_font_0608.c  display.c  display.h  doom_game.c  ui_common.c  ui_headless_stubs.c  ui_mesh_actions.cpp  ui_mesh_actions.h  ui_pages.c  ui_pages.h  ui_task.c  ui_task.h
zephcore/helpers/ui-button/: time_sync.c  ui_pages.c  ui_pages.h  ui_task.c
zephcore/helpers/ui-joystick/: joystick_defs.h  joystick_display.h  joystick_screens.h  joystick_ui_hooks.cpp  joystick_ui_hooks.h  joystick_ui_task.cpp  joystick_ui_task.h  time_sync.c
zephcore/helpers/ui-joystick/screens/: contacts.cpp  home.cpp  input.cpp  messaging.cpp  screen_helpers.h  system.cpp  tools.cpp
zephcore/include/mesh/: Identity.h  Packet.h  Utils.h
zephcore/patches/zephyr/: 0003-lora-sx126x-native.patch  0008-flash-sim-per-node-file.patch
zephcore/patches/zephyr-new/drivers/gpio/: gpio_native_linux.c  gpio_native_linux_adapt.c
zephcore/patches/zephyr-new/drivers/lora/lr11xx/: lr11xx_lora.c
zephcore/src/: Dispatcher.cpp  Identity.cpp  Mesh.cpp  Packet.cpp  StaticPoolPacketManager.cpp  Utils.cpp  main_companion.cpp  main_repeater.cpp  main_room_server.cpp
